Fix image source url in notebook

--- a/irrelevant/wtf.ipynb
+++ b/irrelevant/wtf.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/nifadyev/wtfpython/refs/heads/feature/%2374/add-dark-theme-and-alt-support-for-images/images/logo.svg\" alt=\"wtfpython logo.\" style=\"display=block; margin:auto\">\n",
+        "<img src=\"https://raw.githubusercontent.com/satwikkansal/wtfpython/refs/heads/master/images/logo.svg\" alt=\"wtfpython logo.\" style=\"display=block; margin:auto\">\n",
         "<h1 align=\"center\">What the f*ck Python! \ud83d\ude31</h1>\n",
         "<p align=\"center\">Exploring and understanding Python through surprising snippets.</p>\n",
         "\n",
